# ASR-Telegram-Bot

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-pip.txt
.dvc/: config
model-repository/quartznet/: config.pbtxt  config.yaml
model-repository/quartznet/1/: model.pt.dvc
src/: Dockerfile  __init__.py  __main__.py  cfg.py
src/bot/: __init__.py  handlers.py
src/routers/: telegram.py
src/utils/: scritpt_quartznet.py
terraform/: s3.tf  variables.tf  versions.tf
